# Halide

./: Makefile
apps/: CMakeLists.txt
apps/auto_viz/: CMakeLists.txt
src/: CodeGen_Internal.cpp  Function.cpp  LLVM_Runtime_Linker.cpp  Lower.cpp  PerfCtrProfiling.cpp  PerfCtrProfiling.h  Pipeline.cpp  Target.cpp  Target.h
src/runtime/: HalideRuntime.h  papi_profiler.h  perfctr_profiler.cpp  perfctr_profiler.h  perfctr_profiler_alt.cpp  perfctr_profiler_inlined.cpp  runtime_api.cpp  runtime_internal.h
